# fr

./: .gitignore  Cargo.toml  README.md  fr-dev.sh  run.sh
src/: cli.rs  command_history.rs  commands.rs  config.rs  errors.rs  filter.rs  filters.rs  interactive.rs  main.rs  search.rs  settings.rs  state.rs
